text shadow changes because it felt weird

--- a/css/styles.css
+++ b/css/styles.css
@@ -404,11 +404,13 @@ a{
   #tier,
   #type,
   #abil {
-    text-shadow: 2px 2px 0px #2a2a2a;
+    text-shadow: 1px 1px 0px #2a2a2a;
   }
 
   #dmg,
-  #str,
+  #str{
+    text-shadow: 1px 1px 0px #3f1515;
+  }
   #alert {
     text-shadow: 2px 2px 0px #3f1515;
   }
