--- a/css/styles.css
+++ b/css/styles.css
@@ -402,9 +402,12 @@ a{
 
   #item,
   #tier,
-  #type,
-  #abil {
+  #type {
     text-shadow: 1px 1px 0px #2a2a2a;
+  }
+
+  #abil {
+    text-shadow: 1px 1px 0px #2a2a00;
   }
 
   #dmg,
