--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ ul{
   border: 2px solid #ffffff;
   box-shadow: 0 0 0 4px #000000;
   padding-left: 9px;
-  text-shadow: 3px 3px 0px #373737;
+  text-shadow: 2px 2px 0px #373737;
   margin-top: 4px;
 }
 
@@ -100,7 +100,7 @@ ul{
   border: 0px solid;
   box-shadow: 0 0 0 2px black;
   color: #fcfcfc;
-  text-shadow: 3px 3px 0px #3e3e3e;
+  text-shadow: 2px 2px 0px #3e3e3e;
 }
 
 #guessBtn:hover {
@@ -116,7 +116,7 @@ ul{
 #alert {
   color: #FF5555;
   text-align: center;
-  text-shadow: 3px 3px 0px #3f1515;
+  text-shadow: 2px 2px 0px #3f1515;
 }
 
 #grid {
@@ -261,19 +261,19 @@ ul{
 #dmg,
 #str {
   color: #ff5555;
-  text-shadow: 3px 3px 0px #3f1515;
+  text-shadow: 2px 2px 0px #3f1515;
 }
 
 #item,
 #tier,
 #type {
   color: #aaaaaa;
-  text-shadow: 3px 3px 0px #2a2a2a;
+  text-shadow: 2px 2px 0px #2a2a2a;
 }
 
 #abil {
   color: #ffaa00;
-  text-shadow: 3px 3px 0px #2a2a00
+  text-shadow: 2px 2px 0px #2a2a00
 }
 
 .ability{
@@ -293,6 +293,7 @@ ul{
   overflow-y: auto;
   font-family: 'Minecraft';
   z-index: 1000;
+  text-align: left;
 }
 
 #openPop{
