--- a/css/styles.css
+++ b/css/styles.css
@@ -304,7 +304,7 @@ ul{
   align-items: center;
 }
 
-#shareBtn, #practiceBtn {
+#shareBtn, #practiceBtn, #practiceBackBtn {
   margin-left: 20px;
   cursor: pointer;
   text-decoration: underline;
